--- a/style.css
+++ b/style.css
@@ -9,3 +9,32 @@
 @tailwind utilities;
 
 /* Custom CSS */
+
+/* Button styles */
+
+.button {
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    padding: 0.5rem 1.5rem;
+    border: 1px solid var(--featured-color);
+    transition: all 150ms;
+    display: inline-block;
+}
+
+.button:hover {
+    background-color: var(--accent-color);
+    border: 1px solid transparent;
+}
+
+header a:hover {
+    background-color: var(--light-accent-color)/50;
+}
+
+footer a {
+    border-bottom: 2px solid transparent;
+}
+
+footer a:hover {
+    border-bottom: 2px solid;
+    display: inline-block;
+}
