playing with header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="uppercase px-8 sm:px-16">
   <!-- order shifted on the newsletter to bring it above on mobile, but then needed to make the flex only on md, which meant we needed to add grid to the default/small size -->
   <div class="border-accent py-16 grid gap-12 justify-center md:flex md:justify-between">
-    <div class="flex gap-16">
+    <div class="flex gap-10 sm:gap-16">
       <div class="">
         <p class="font-bold pb-4">Group name</p>
         <a href="#" class="block">Link 1</a>
