--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,23 @@
 <header class="relative min-h-screen flex flex-col">
   <img class="absolute inset-0 w-full h-full object-cover -scale-y-100" src="https://images.unsplash.com/photo-1495476479092-6ece1898a101?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-  <nav class="relative p-2 flex justify-between content-center pb-4 border-b border-accent text-accent">
+  <nav class="relative p-2 flex justify-between content-center py-4 border-b border-accent text-accent">
       <div>
-          <a href="#" class="p-4 uppercase text-sm">Link 1</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 2</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 3</a>
+          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 1</a>
+          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 2</a>
+          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 3</a>
       </div>
       <div>
-          <a href="#" class="p-2 uppercase text-md text-white">Logo</a> 
+          <a href="#" class="p-2 uppercase text-md text-white featured-text">Logo</a> 
       </div>
       <div>
-          <a href="#" class="p-4 uppercase text-sm">Link 1</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 2</a>
-          <a href="#" class="p-4 uppercase text-sm">Link 3</a>
+          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 1</a>
+          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 2</a>
+          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 3</a>
       </div>
   </nav>
-  <div class="relative text-center text-white grow flex flex-col justify-center">
-      <h1 class="text-5xl uppercase ">This is a heading</h1>
+  <div class="relative text-center text-white grow flex flex-col justify-top">
+      <hr class="border-1 border-accent pb-5 mt-20 sm:mt-36 w-60 mx-auto">
+      <h1 class="text-5xl py-2 uppercase featured-text tracking-wider">This is a heading</h1>
       <p>This is a subheading</p>
   </div>
 </header>
