--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,26 +460,33 @@ video {
 .order-first {
   order: -9999;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-9 {
+  grid-column: span 9 / span 9;
+}
+.-mx-4 {
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
-}
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
-.-ml-24 {
-  margin-left: -6rem;
-}
-.mt-36 {
-  margin-top: 9rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .mt-20 {
   margin-top: 5rem;
+}
+.mt-4 {
+  margin-top: 1rem;
 }
 .block {
   display: block;
@@ -490,27 +497,42 @@ video {
 .grid {
   display: grid;
 }
+.hidden {
+  display: none;
+}
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
 .h-full {
   height: 100%;
+}
+.min-h-96 {
+  min-height: 24rem;
 }
 .min-h-screen {
   min-height: 100vh;
 }
+.w-60 {
+  width: 15rem;
+}
 .w-full {
   width: 100%;
 }
-.w-80 {
-  width: 20rem;
-}
-.w-60 {
-  width: 15rem;
+.shrink-0 {
+  flex-shrink: 0;
 }
 .grow {
   flex-grow: 1;
 }
+.basis-\[30\%\] {
+  flex-basis: 30%;
+}
 .-scale-y-100 {
   --tw-scale-y: -1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -524,23 +546,37 @@ video {
 .justify-between {
   justify-content: space-between;
 }
+.gap-10 {
+  gap: 2.5rem;
+}
 .gap-12 {
   gap: 3rem;
 }
-.gap-16 {
-  gap: 4rem;
+.gap-6 {
+  gap: 1.5rem;
 }
-.gap-10 {
-  gap: 2.5rem;
+.overflow-x-auto {
+  overflow-x: auto;
 }
 .border {
   border-width: 1px;
 }
-.border-2 {
-  border-width: 2px;
+.border-x {
+  border-left-width: 1px;
+  border-right-width: 1px;
+}
+.border-y {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
 }
 .border-b {
   border-bottom-width: 1px;
+}
+.border-r-0 {
+  border-right-width: 0px;
+}
+.border-t-0 {
+  border-top-width: 0px;
 }
 .border-accent {
   border-color: var(--accent-color);
@@ -558,16 +594,18 @@ video {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-.object-none {
-  -o-object-fit: none;
-     object-fit: none;
-}
 .p-2 {
   padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
+}
+.p-8 {
+  padding: 2rem;
+}
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 .px-8 {
   padding-left: 2rem;
@@ -577,28 +615,43 @@ video {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.pb-4 {
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+.py-4 {
+  padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.pl-2 {
-  padding-left: 0.5rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
 }
-.pt-36 {
-  padding-top: 9rem;
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pt-6 {
+  padding-top: 1.5rem;
 }
 .text-center {
   text-align: center;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-5xl {
   font-size: 3rem;
@@ -608,14 +661,18 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .font-bold {
   font-weight: 700;
 }
+.font-semibold {
+  font-weight: 600;
+}
 .uppercase {
   text-transform: uppercase;
-}
-.tracking-wide {
-  letter-spacing: 0.025em;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
@@ -641,8 +698,8 @@ body           { font-family: "Poppins", sans-serif; }
 
 .button {
     text-transform: uppercase;
-    font-size: 0.75rem;
-    padding: 0.5rem 1.5rem;
+    font-size: 0.875rem;
+    padding: 0.3rem 1.2rem;
     border: 1px solid var(--featured-color);
     transition: all 150ms;
     display: inline-block;
@@ -687,6 +744,9 @@ footer a:hover {
   .sm\:mt-36 {
     margin-top: 9rem;
   }
+  .sm\:block {
+    display: block;
+  }
   .sm\:gap-16 {
     gap: 4rem;
   }
@@ -700,8 +760,17 @@ footer a:hover {
   .md\:order-none {
     order: 0;
   }
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
   .md\:flex {
     display: flex;
+  }
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
   .md\:justify-between {
     justify-content: space-between;
