--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,17 +2,17 @@
   <img class="absolute inset-0 w-full h-full object-cover -scale-y-100" src="https://images.unsplash.com/photo-1495476479092-6ece1898a101?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
   <nav class="relative p-2 flex justify-between content-center py-4 border-b border-accent text-accent">
       <div>
-          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 1</a>
-          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 2</a>
-          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 3</a>
+          <a href="#" class="py-2 px-4 mx-4 uppercase text-sm">Link 1</a>
+          <a href="#" class="py-2 px-4 mx-4 uppercase text-sm">Link 2</a>
+          <a href="#" class="py-2 px-4 mx-4 uppercase text-sm">Link 3</a>
       </div>
       <div>
-          <a href="#" class="p-2 uppercase text-md text-white featured-text">Logo</a> 
+          <a href="#" class="py-2 px-4 uppercase text-md text-white featured-text">Logo</a> 
       </div>
       <div>
-          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 1</a>
-          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 2</a>
-          <a href="#" class="p-2 mx-5 uppercase text-sm">Link 3</a>
+          <a href="#" class="py-2 px-4 mx-4 uppercase text-sm">Link 1</a>
+          <a href="#" class="py-2 px-4 mx-4 uppercase text-sm">Link 2</a>
+          <a href="#" class="py-2 px-4 mx-4 uppercase text-sm">Link 3</a>
       </div>
   </nav>
   <div class="relative text-center text-white grow flex flex-col justify-top">
