added the contact us section
also added a light-base color and fixed the buttons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
     <form class="flex flex-col order-first md:order-none">
       <p>Subscribe to our newsletter</p>
       <label class="sr-only" for="_replyto"> Email </label>
-      <input class="my-4 border-featured border bg-inherit focus:bg-light-accent focus:outline-none pl-2" type="email" name="_replyto" id="_replyto" placeholder=""/>
+      <input class="my-4 border-featured border bg-inherit focus:bg-light-base focus:outline-none p-1" type="email" name="_replyto" id="_replyto" placeholder=""/>
       <div>
         <a href="" type="submit" class="button"> Subscribe </a>
       </div>
