--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
       --accent-color: {{site.data.style.accent-color}};
       --light-accent-color: {{site.data.style.light-accent-color}};
       --base-color: {{site.data.style.base-color}};
+      --light-base-color: {{site.data.style.light-base-color}};
    }
 </style>
 
