--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,9 +473,9 @@ video {
   margin-left: -1rem;
   margin-right: -1rem;
 }
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -485,9 +485,8 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .mt-20 {
   margin-top: 5rem;
@@ -559,6 +558,9 @@ video {
 .justify-between {
   justify-content: space-between;
 }
+.gap-1 {
+  gap: 0.25rem;
+}
 .gap-10 {
   gap: 2.5rem;
 }
@@ -568,8 +570,13 @@ video {
 .gap-6 {
   gap: 1.5rem;
 }
-.gap-1 {
-  gap: 0.25rem;
+.divide-x > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(1px * var(--tw-divide-x-reverse));
+  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+}
+.divide-featured > :not([hidden]) ~ :not([hidden]) {
+  border-color: var(--featured-color);
 }
 .overflow-x-auto {
   overflow-x: auto;
@@ -588,6 +595,9 @@ video {
 .border-b {
   border-bottom-width: 1px;
 }
+.border-b-2 {
+  border-bottom-width: 2px;
+}
 .border-r-0 {
   border-right-width: 0px;
 }
@@ -600,15 +610,27 @@ video {
 .border-featured {
   border-color: var(--featured-color);
 }
+.border-transparent {
+  border-color: transparent;
+}
 .bg-base-color {
   background-color: var(--base-color);
 }
 .bg-inherit {
   background-color: inherit;
 }
+.bg-light-base {
+  background-color: var(--light-base-color);
+}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.p-1 {
+  padding: 0.25rem;
+}
+.p-1\.5 {
+  padding: 0.375rem;
 }
 .p-2 {
   padding: 0.5rem;
@@ -622,6 +644,10 @@ video {
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .px-8 {
   padding-left: 2rem;
@@ -647,13 +673,12 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.pb-12 {
+  padding-bottom: 3rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
@@ -664,24 +689,25 @@ video {
 .pb-6 {
   padding-bottom: 1.5rem;
 }
-.pl-2 {
-  padding-left: 0.5rem;
+.pt-12 {
+  padding-top: 3rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
 }
-.pt-8 {
-  padding-top: 2rem;
-}
-.pt-12 {
-  padding-top: 3rem;
-}
 .text-center {
   text-align: center;
+}
+.font-sans {
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-5xl {
   font-size: 3rem;
@@ -695,16 +721,11 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
 .font-bold {
   font-weight: 700;
+}
+.font-extrabold {
+  font-weight: 800;
 }
 .font-semibold {
   font-weight: 600;
@@ -735,6 +756,8 @@ body           { font-family: "Poppins", sans-serif; }
 /* Button styles */
 
 .button {
+    background-color: var(--featured-color);
+    color: var(--light-base-color);
     text-transform: uppercase;
     font-size: 0.875rem;
     padding: 0.3rem 1.2rem;
@@ -745,6 +768,7 @@ body           { font-family: "Poppins", sans-serif; }
 
 .button:hover {
     background-color: var(--accent-color);
+    color: var(--featured-color);
     border: 1px solid transparent;
 }
 
@@ -768,8 +792,16 @@ footer a:hover {
     display: inline-block;
 }
 
-.focus\:bg-light-accent:focus {
-  background-color: var(--light-accent-color);
+.focus\:border:focus {
+  border-width: 1px;
+}
+
+.focus\:border-featured:focus {
+  border-color: var(--featured-color);
+}
+
+.focus\:bg-light-base:focus {
+  background-color: var(--light-base-color);
 }
 
 .focus\:outline-none:focus {
@@ -806,6 +838,9 @@ footer a:hover {
   .md\:flex {
     display: flex;
   }
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -814,5 +849,11 @@ footer a:hover {
   }
   .md\:justify-between {
     justify-content: space-between;
+  }
+  .md\:pr-12 {
+    padding-right: 3rem;
+  }
+  .md\:pt-0 {
+    padding-top: 0px;
   }
 }
