--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body           { font-family: "Poppins", sans-serif; }
 /* Button styles */
 
 .button {
+    background-color: var(--featured-color);
+    color: var(--light-base-color);
     text-transform: uppercase;
     font-size: 0.875rem;
     padding: 0.3rem 1.2rem;
@@ -27,6 +29,7 @@ body           { font-family: "Poppins", sans-serif; }
 
 .button:hover {
     background-color: var(--accent-color);
+    color: var(--featured-color);
     border: 1px solid transparent;
 }
 
