adding the option for adding client photo in the 'bg-image-and-text-banner'

--- a/_includes/bg-image-and-text-banner.html
+++ b/_includes/bg-image-and-text-banner.html
@@ -1,4 +1,4 @@
-<section class="min-h-96 grid grid-cols-12 md:grid-cols-5 border-y border-featured" style="background-image: url('https://plus.unsplash.com/premium_photo-1669863547357-b7d064cedaac?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')">
+<section class="min-h-96 grid grid-cols-12 md:grid-cols-5 border-y border-featured" style="background-image: url('{{block.bg-image}}')">
   <div class="col-span-1"></div>
   <div class="bg-base-color p-8 py-32 border-x border-featured col-span-9 md:col-span-2 content-center">
       <h2 class="uppercase text-3xl pb-4 featured-text">{{block.heading}}</h2>
